--- a/final-project-fe/final-project-fe.csproj
+++ b/final-project-fe/final-project-fe.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>final_project_fe</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
