--- a/final-project-fe/appsettings.Production.json
+++ b/final-project-fe/appsettings.Production.json
@@ -8,6 +8,7 @@
   },
 
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7148/api"
+    "BaseUrl": "https://api.yourproductiondomain.com"
   }
+
 }
