config production env

--- a/final-project-fe/appsettings.Production.json
+++ b/final-project-fe/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
 
   "ApiSettings": {
-    "BaseUrl": "https://api.yourproductiondomain.com"
+    "BaseUrl": "https://phronesis-c2dzfzakfwe9eyf0.southeastasia-01.azurewebsites.net/api"
   }
 
 }
