Real-time and Signalr config
Real-time and Signalr config

--- a/final-project-fe/appsettings.Development.json
+++ b/final-project-fe/appsettings.Development.json
@@ -9,5 +9,8 @@
 
   "ApiSettings": {
     "BaseUrl": "https://localhost:7148/api"
+  },
+  "SignalrSetting": {
+    "HubUrl": "https://localhost:7148"
   }
 }
