--- a/final-project-fe/appsettings.Production.json
+++ b/final-project-fe/appsettings.Production.json
@@ -9,6 +9,8 @@
 
   "ApiSettings": {
     "BaseUrl": "https://phronesis-c2dzfzakfwe9eyf0.southeastasia-01.azurewebsites.net/api"
+  },
+  "SignalrSetting": {
+    "HubUrl": "https://phronesis-c2dzfzakfwe9eyf0.southeastasia-01.azurewebsites.net"
   }
-
 }
