--- a/final-project-fe/appsettings.Production.json
+++ b/final-project-fe/appsettings.Production.json
@@ -14,6 +14,9 @@
   "SignalrSetting": {
     "HubUrl": "https://phronesis-c2dzfzakfwe9eyf0.southeastasia-01.azurewebsites.net"
   },
+  "ImageSettings": {
+    "ImageKey": "sp=r&st=2025-05-28T06:11:09Z&se=2026-01-01T14:11:09Z&spr=https&sv=2024-11-04&sr=c&sig=YdDYGbzpNp4XPSKVVDM0bb411XOEPgA8b0i2PFCfc1c%3D"
+  },
   "PayOS": {
     "ApiUrl": "https://api-merchant.payos.vn",
     "ClientId": "bc00df3d-3bfa-416c-962d-e33332472cf2",
